# ONNXFRONT

./: .gitignore  CMakeLists.txt  Readme.md
include/: exportdot.h  graph.h  onnx_import.h  parse_attr.h
src/: exportdot.cpp  graph.cpp  main.cpp  onnx_import.cpp  parse_attr.cpp
tests/: graph_test.cpp  onnx_import_test.cpp  parse_attr_test.cpp
